Auth application with spring security : Initial commit